use titles, put imports on top and _meta for integrations

--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -1,7 +1,4 @@
----
-id: comparison
-title: Comparison with other JavaScript GraphQL server libraries
----
+# Comparison with other JavaScript GraphQL server libraries
 
 ## GraphQL Yoga and Apollo Server
 
