--- a/website/src/pages/v3/features/automatic-persisted-queries.mdx
+++ b/website/src/pages/v3/features/automatic-persisted-queries.mdx
@@ -1,9 +1,6 @@
----
-id: automatic-persisted-queries
-title: Automatic Persisted Queries
----
-
 import { PackageCmd } from '@theguild/components'
+
+# Automatic persisted queries
 
 Automatic Persisted Queries is a protocol for reducing the overhead of sending the same GraphQL documents to the server over and over again.
 Since the upload speed can be the bottleneck from client to server, reducing the payload size can improve the performance.
