--- a/website/src/pages/v3/features/file-uploads.mdx
+++ b/website/src/pages/v3/features/file-uploads.mdx
@@ -1,7 +1,4 @@
----
-id: file-uploads
-title: Enable File Uploads in GraphQL Yoga
----
+# File uploads
 
 GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec) which basically allows you to upload files via HTTP and consume the binary data inside GraphQL Resolvers.
 
