--- a/website/src/pages/v3/features/graphiql.mdx
+++ b/website/src/pages/v3/features/graphiql.mdx
@@ -1,9 +1,6 @@
----
-id: graphiql
-title: GraphiQL
----
-
 import { PackageCmd } from '@theguild/components'
+
+# GraphiQL
 
 [GraphiQL is an in-browser IDE for writing, validating, and testing GraphQL queries.](https://github.com/graphql/graphiql)
 
@@ -148,7 +145,7 @@ server.listen(4000, () => {
 ## Offline Usage
 
 By default, GraphiQL code is served from a CDN because if we added GraphiQL code inside Yoga, it would end up with huge bundle size and exceed the payload limit for some environments for example (CF Workers, AWS etc).
-If you want to use GraphiQL from a local version, you need to install it manually.import { PackageCmd } from '@theguild/components';
+If you want to use GraphiQL from a local version, you need to install it manually.
 
 <PackageCmd packages={['@graphql-yoga/render-graphiql']} />
 
