--- a/website/src/pages/v3/features/persisted-operations.mdx
+++ b/website/src/pages/v3/features/persisted-operations.mdx
@@ -1,9 +1,6 @@
----
-id: persisted-operations
-title: Persisted Operations
----
-
 import { PackageCmd } from '@theguild/components'
+
+# Persisted operations
 
 Persisted operations is a mechanism for preventing the execution of arbitary GraphQL operation documents.
 By default, the persisted operations plugin follows the [the APQ Specification of Apollo](https://github.com/apollographql/apollo-link-persisted-queries#apollo-engine) for **SENDING** hashes to the server.
