--- a/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
@@ -1,8 +1,6 @@
----
-id: integration-with-cloudflare-workers
-title: Integration with Cloudflare Workers
-type: Guide
----
+import { PackageCmd } from '@theguild/components'
+
+# Integration with Cloudflare Workers
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 
@@ -25,8 +23,6 @@ You will want to use the package `graphql-yoga` which has an agnostic HTTP handl
 ></iframe>
 
 ## Installation
-
-import { PackageCmd } from '@theguild/components'
 
 <PackageCmd packages={['graphql', 'graphql-yoga']} />
 
