--- a/website/src/pages/v3/integrations/integration-with-deno.mdx
+++ b/website/src/pages/v3/integrations/integration-with-deno.mdx
@@ -1,8 +1,4 @@
----
-id: integration-with-deno
-title: Integration with Deno
-type: Guide
----
+# Integration with Deno
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 [Deno is a simple, modern and secure runtime for JavaScript and TypeScript that uses V8 and is built in Rust](https://deno.land/).
