--- a/website/src/pages/v3/integrations/integration-with-fastify.mdx
+++ b/website/src/pages/v3/integrations/integration-with-fastify.mdx
@@ -1,8 +1,6 @@
----
-id: integration-with-fastify
-title: Integration with Fastify
-type: Guide
----
+import { PackageCmd } from '@theguild/components'
+
+# Integration with Fastify
 
 [Fastify is one of the popular HTTP server frameworks for Node.js.](https://www.fastify.io/) It is a very simple, yet powerful framework that is easy to learn and use.
 You can easily integrate GraphQL Yoga with Fastify.
@@ -11,8 +9,6 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 [See the ecosystem](https://www.fastify.io/docs/latest/Guides/Ecosystem/)
 
 ## Installation
-
-import { PackageCmd } from '@theguild/components'
 
 <PackageCmd packages={['fastify', 'graphql', 'graphql-yoga']} />
 
