--- a/website/src/pages/v3/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nextjs.mdx
@@ -1,14 +1,10 @@
----
-id: integration-with-nextjs
-title: Integration with nextjs
-type: Guide
----
+import { PackageCmd } from '@theguild/components'
+
+# Integration with NextJS
 
 [Next.js](https://nextjs.org/) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
 
 ## Installation
-
-import { PackageCmd } from '@theguild/components'
 
 <PackageCmd packages={['graphql', 'graphql-yoga']} />
 
