--- a/website/src/pages/v3/integrations/z-other-environments.mdx
+++ b/website/src/pages/v3/integrations/z-other-environments.mdx
@@ -1,8 +1,4 @@
----
-id: z-other-environments
-title: Integration with other environments
-type: Guide
----
+# Integration with other environments
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
 
