--- a/website/src/pages/v3/migration/migration-from-apollo-server.mdx
+++ b/website/src/pages/v3/migration/migration-from-apollo-server.mdx
@@ -1,14 +1,10 @@
----
-id: migration-from-apollo-server
-title: Migration from Apollo Server
-type: Guide
----
-
 import { PackageCmd } from '@theguild/components'
+
+# Migration from Apollo Server
 
 ## Installation
 
-You can start with installing `graphql-yoga` package.import { PackageCmd } from '@theguild/components';
+You can start with installing `graphql-yoga` package.
 
 <PackageCmd packages={['graphql-yoga']} />
 
