--- a/website/src/pages/v3/features/cors.mdx
+++ b/website/src/pages/v3/features/cors.mdx
@@ -1,7 +1,4 @@
----
-id: cors
-title: Configuring CORS with Yoga
----
+# Configuring CORS
 
 CORS stands for Cross Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
 
