--- a/website/src/pages/v3/integrations/integration-with-sveltekit.mdx
+++ b/website/src/pages/v3/integrations/integration-with-sveltekit.mdx
@@ -1,10 +1,6 @@
----
-id: integration-with-sveltekit
-title: Integration with SvelteKit
-type: Guide
----
-
 import { PackageCmd } from '@theguild/components'
+
+# Integration with SvelteKit
 
 [SvelteKit is the fastest way to build svelte apps.](https://kit.svelte.dev/) It is very simple, and let you build frontend & backend in a single place.
 
@@ -12,7 +8,7 @@ You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQ
 
 ## Installation
 
-In a SvelteKit project:import { PackageCmd } from '@theguild/components';
+In a SvelteKit project:
 
 <PackageCmd packages={['graphql', 'graphql-yoga']} />
 
