--- a/website/src/pages/v3/features/apollo-federation.mdx
+++ b/website/src/pages/v3/features/apollo-federation.mdx
@@ -1,6 +1,6 @@
 import { Callout, PackageCmd } from '@theguild/components'
 
-# Apollo federation
+# Apollo Federation
 
 [Apollo Federation](https://apollographql.com/docs/federation) is a specification that applies microservice architecture through GraphQL APIs.
 
