--- a/website/src/pages/v3/features/health-check.mdx
+++ b/website/src/pages/v3/features/health-check.mdx
@@ -1,6 +1,6 @@
 import { Callout } from '@theguild/components'
 
-# Health check
+# Health Check
 
 Yoga is aware of the usefulness of a health check and gives the user maximum possibilities to use the built-in check and create a "readiness" check through a simple plugin.
 
