--- a/website/src/pages/v3/features/response-caching.mdx
+++ b/website/src/pages/v3/features/response-caching.mdx
@@ -1,6 +1,6 @@
 import { PackageCmd } from '@theguild/components'
 
-# Response caching
+# Response Caching
 
 Response caching is a technique for reducing server load by caching GraphQL query operation results.
 
