--- a/website/src/pages/v3/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nextjs.mdx
@@ -1,6 +1,6 @@
 import { PackageCmd } from '@theguild/components'
 
-# Integration with NextJS
+# Integration with Next.js
 
 [Next.js](https://nextjs.org/) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
 
