--- a/website/src/pages/v3/integrations/z-other-environments.mdx
+++ b/website/src/pages/v3/integrations/z-other-environments.mdx
@@ -1,4 +1,4 @@
-# Integration with other environments
+# Other Environments
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
 
