--- a/website/src/pages/v3/features/context.mdx
+++ b/website/src/pages/v3/features/context.mdx
@@ -1,4 +1,4 @@
-# GraphQL context
+# GraphQL Context
 
 A context is usually created for each execution of a GraphQL Operation, and it is passed to the resolver functions as a third argument.
 You can learn more about [`Context` in GraphQL Tools docs](https://graphql-tools.com/docs/connectors).
