--- a/website/src/pages/v3/features/cors.mdx
+++ b/website/src/pages/v3/features/cors.mdx
@@ -1,4 +1,4 @@
-# Configuring CORS
+# CORS
 
 CORS stands for Cross Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
 
