--- a/website/src/pages/v3/features/envelop-plugins.mdx
+++ b/website/src/pages/v3/features/envelop-plugins.mdx
@@ -1,4 +1,4 @@
-# Envelop plugins
+# Envelop Plugins
 
 [Envelop is a lightweight JavaScript (TypeScript) library for customizing the GraphQL execution layer, allowing developers to build, share and compose plugins that enhance the capabilities of your GraphQL server](https://envelop.dev).
 GraphQL Yoga uses [Envelop](https://envelop.dev) under the hood so you can easily extend your server's capabilities with the plugins from [Envelop Ecosystem](https://www.envelop.dev/plugins)
