--- a/website/src/pages/v3/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nestjs.mdx
@@ -1,6 +1,6 @@
 import { PackageCmd } from '@theguild/components'
 
-# Integration with Nest
+# Integration with NestJS
 
 [Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
