--- a/website/src/pages/v3/features/cors.mdx
+++ b/website/src/pages/v3/features/cors.mdx
@@ -52,7 +52,7 @@ Access-Control-Allow-Headers: X-Custom-Header
 
 ### Example configuration using builder function
 
-You can also pass a function to the cors property, that takes your request and contructs the options
+You can also pass a function to the cors property, that takes your request and constructs the options
 
 ```ts
 import { createYoga } from 'graphql-yoga'
@@ -76,7 +76,7 @@ This will return the same headers as the previous example, but take the `origin`
 
 By default, GraphQL Yoga will return `Access-Control-Allow-Origin: *` when preflight requests are made.
 
-This means cross origin requests from browsers work out of the box - however it may be appropriate to lock to a specifc domain before deploying to production.
+This means cross origin requests from browsers work out of the box - however it may be appropriate to lock to a specific domain before deploying to production.
 
 ## Disabling CORS
 
