--- a/website/src/pages/v3/features/subscriptions.mdx
+++ b/website/src/pages/v3/features/subscriptions.mdx
@@ -231,13 +231,13 @@ Please refer to the [`graphql-ws` client recipes](https://github.com/enisdenjo/g
 
 ### SSE vs WebSocket
 
-#### Advantages of SSE over Websockets#
+#### Advantages of SSE over WebSockets#
 
 - Transported over simple HTTP instead of a custom protocol
 - Built in support for re-connection and event-id Simpler protocol
 - No trouble with corporate firewalls doing packet inspection
 
-#### Advantages of Websockets over SSE
+#### Advantages of WebSockets over SSE
 
 - Real time, two directional communication.
 - Lower latency
