--- a/website/src/pages/v3/migration/migration-from-apollo-server.mdx
+++ b/website/src/pages/v3/migration/migration-from-apollo-server.mdx
@@ -75,7 +75,7 @@ GraphQL Yoga does not support batched queries for the following reasons:
 
 Because the GraphQL server does not start sending a response to the client until all the queries are completed, a slow query will prevent a faster query result to be already processed/shown to the end user.
 
-**_Batched queries can ba achieved by componsing multiple GraphQL fragments/operation into a single one._**
+**_Batched queries can ba achieved by composing multiple GraphQL fragments/operation into a single one._**
 
 Instead of having two operations:
 
