--- a/website/src/pages/v3/features/persisted-operations.mdx
+++ b/website/src/pages/v3/features/persisted-operations.mdx
@@ -45,7 +45,7 @@ curl -X POST -H 'Content-Type: application/json' http://localhost:4000/graphql \
 -d '{"extensions":{"persistedQuery":{"version":1,"sha256Hash":"ecf4edb46db40b5132295c0291d62fb65d6759a9eedfa4d5d612dd5ec54a6b38"}}}'
 ```
 
-Then afterwards we can send the same payload againl, but this time omit the `query` field.
+Then afterwards we can send the same payload again, but this time omit the `query` field.
 
 Especially for big GraphQL document strings, the subsequent payload can be much smaller.
 
@@ -91,7 +91,7 @@ server.listen(4000, () => {
 The persisted operations plugin follows the [the APQ Specification of Apollo](https://github.com/apollographql/apollo-link-persisted-queries#apollo-engine) for SENDING hashes to the server.
 
 GraphQL clients such `Apollo Client` and `Urql` support that out of the box.
-Check the corresponding doucmentation for more information.
+Check the corresponding documentation for more information.
 
 - [Apollo Client](https://www.apollographql.com/docs/apollo-server/performance/apq/#step-2-enable-automatic-persisted-queries)
 - [Urql](https://formidable.com/open-source/urql/docs/advanced/persistence-and-uploads/)
